i18n/zh-Hans/docusaurus-plugin-content-docs/version-1.2/dankmaterialshell/keybinds-ipc.mdx
---
title: 按键绑定和 IPC
description: 用于 DankMaterialShell 外部控制的全面 IPC 功能
sidebar_position: 5
---

import Hero from '@site/src/components/Hero';

<Hero
  asciiArt={`██████╗ ███╗   ███╗███████╗
██╔══██╗████╗ ████║██╔════╝
██║  ██║██╔████╔██║███████╗
██║  ██║██║╚██╔╝██║╚════██║
██████╔╝██║ ╚═╝ ██║███████║
╚═════╝ ╚═╝     ╚═╝╚══════╝`}
  hideTitle={true}
/>

DankMaterialShell 提供全面的 IPC（进程间通信）功能，允许通过命令行命令对 shell 进行外部控制。所有 IPC 命令都遵循以下格式：

```bash
dms ipc call <target> <function> [parameters...]
```

## 核心控制 {#core-controls}

### 音频 {#audio}

管理音频输出和输入设备。

|功能|描述 |参数|
| --- | --- | --- |
| `setvolume <percentage>` |设置输出音量 |百分比 (0-100) |
| `increment <step>` |增加输出音量 |步骤（默认：5）|
| `decrement <step>` |降低输出音量 |步骤（默认：5）|
| `mute` |切换输出静音 | - |
| `setmic <percentage>` |设置麦克风音量 |百分比 (0-100) |
| `micmute` |切换麦克风静音 | - |
| `cycleoutput` |循环切换音频输出设备 | - |
| `status` |获取当前音频状态 | - |

**示例：**
```bash
dms ipc call audio setvolume 50
dms ipc call audio increment 10
dms ipc call audio mute
dms ipc call audio cycleoutput
```

### 亮度 {#brightness}

控制内部和外部显示器的显示亮度。

|功能|描述 |参数|
| --- | --- | --- |
| `set <percentage> [device]` |设置亮度级别 |百分比（1-100），设备（可选）|
| `increment <step> [device]` |增加亮度|步骤、设备（可选）|
| `decrement <step> [device]` |降低亮度 |步骤、设备（可选）|
| `status` |获取当前亮度状态 | - |
| `list` |列出所有亮度设备 | - |
| `enableExponential [device]` |启用指数亮度模式 |设备（可选，如果未指定则使用电流）|
| `disableExponential [device]` |禁用指数亮度模式 |设备（可选，如果未指定则使用电流）|
| `toggleExponential [device]` |切换指数亮度模式 |设备（可选，如果未指定则使用电流）|

**示例：**
```bash
dms ipc call brightness set 80
dms ipc call brightness increment 10 ""
dms ipc call brightness decrement 5 "intel_backlight"
dms ipc call brightness disableExponential "backlight:intel_backlight"
dms ipc call brightness toggleExponential
```

### 晚上 {#night}

夜间模式（伽玛/色温）控制。

|功能|描述 |参数|
| --- | --- | --- |
| `toggle` |打开/关闭夜间模式| - |
| `enable` |启用夜间模式 | - |
| `disable` |禁用夜间模式 | - |
| `status` |获取夜间模式状态 | - |
| `temperature [value]` |获取/设置色温 |开尔文值 (2500-6000，可选)|
| `automation [mode]` |获取/设置自动化模式 | “手动”、“时间”或“位置”（可选）|
| `schedule <start> <end>` |设置基于时间的时间表 |开始时间 (HH:MM)、结束时间 (HH:MM) |
| `location <lat> <lon>` |设置位置坐标|纬度、经度 |

**示例：**
```bash
dms ipc call night toggle
dms ipc call night temperature 4000
dms ipc call night automation time
dms ipc call night schedule 20:00 06:00
dms ipc call night location 40.7128 -74.0060
```

### mpris {#mpris}

通过 MPRIS 接口控制媒体播放器。

|功能|描述 |
| --- | --- |
| `list` |列出所有可用的媒体播放器 |
| `play` |开始播放 |
| `pause` |暂停播放 |
| `playPause` |切换播放/暂停 |
| `previous` |跳至上一曲目 |
| `next` |跳至下一首曲目 |
| `stop` |停止播放 |

**示例：**
```bash
dms ipc call mpris playPause
dms ipc call mpris next
```

### 锁 {#lock}

屏幕锁定控制和状态。

|功能|描述 |
| --- | --- |
| `lock` |立即锁定屏幕 |
| `demo` |显示锁屏演示（不锁定）|
| `isLocked` |检查屏幕是否锁定 |

**示例：**
```bash
dms ipc call lock lock
dms ipc call lock isLocked
```

### 抑制 {#inhibit}

空闲抑制器控制可防止自动睡眠/锁定。

|功能|描述 |
| --- | --- |
| `toggle` |切换空闲禁止状态|
| `enable` |启用空闲抑制（防止睡眠）|
| `disable` |禁用空闲抑制（允许睡眠）|

**示例：**
```bash
dms ipc call inhibit toggle
dms ipc call inhibit enable
```

## 壁纸和个人资料 {#wallpaper--profile}

### 壁纸 {#wallpaper}

壁纸管理支持全局和每显示器配置。

#### 全局壁纸功能 {#global-wallpaper-functions}

|功能|描述 |参数|
| --- | --- | --- |
| `get` |获取当前壁纸路径| - |
| `set <path>` |设置壁纸|图像文件路径 |
| `clear` |清除所有壁纸 | - |
| `next` |循环到下一张壁纸| - |
| `prev` |循环到上一张壁纸 | - |

#### 每个监视器的功能 {#per-monitor-functions}

|功能|描述 |参数|
| --- | --- | --- |
| `getFor <screen>` |获取显示器壁纸 |显示器名称（例如“DP-2”）|
| `setFor <screen> <path>` |设置显示器壁纸|显示器名称、图像路径 |
| `nextFor <screen>` |循环到下一张壁纸|显示器名称 |
| `prevFor <screen>` |循环到上一张壁纸|显示器名称 |

**示例：**
```bash
# Global wallpaper mode
dms ipc call wallpaper set /path/to/image.jpg
dms ipc call wallpaper next

# Per-monitor wallpaper mode
dms ipc call wallpaper setFor DP-2 /path/to/image1.jpg
dms ipc call wallpaper setFor eDP-1 /path/to/image2.jpg
dms ipc call wallpaper nextFor eDP-1

# Clear and return to global mode
dms ipc call wallpaper clear
```

**注意：** 启用每监视器模式时，旧版全局函数将返回错误消息，指导您使用每监视器等效项。

### 个人资料 {#profile}

用户个人资料图像管理。

|功能|描述 |参数|
| --- | --- | --- |
| `getImage` |获取当前头像路径 | - |
| `setImage <path>` |设置个人资料图片 |图像文件路径 |
| `clearImage` |清晰的个人资料图片 | - |

**示例：**
```bash
dms ipc call profile setImage /path/to/avatar.png
dms ipc call profile clearImage
```

## 外观控制 {#appearance-controls}

### 主题 {#theme}

主题模式控制（亮/暗模式切换）。

|功能|描述 |
| --- | --- |
| `toggle` |在浅色和深色主题之间切换 |
| `light` |切换到浅色主题 |
| `dark` |切换到深色主题 |
| `getMode` |获取当前主题模式 |

**示例：**
```bash
dms ipc call theme toggle
dms ipc call theme dark
```

### 酒吧 {#bar}

使用灵活的选择器控制各个条。

|功能|描述 |参数|
| --- | --- | --- |
| `reveal <selector> <value>` |显示酒吧 |选择器 + 值 |
| `hide <selector> <value>` |隐藏酒吧 |选择器 + 值 |
| `toggle <selector> <value>` |切换栏可见性 |选择器 + 值 |
| `status <selector> <value>` |获取酒吧可见性状态 |选择器 + 值 |
| `autoHide <selector> <value>` |启用自动隐藏模式 |选择器 + 值 |
| `manualHide <selector> <value>` |禁用自动隐藏模式 |选择器 + 值 |
| `toggleAutoHide <selector> <value>` |切换自动隐藏模式 |选择器 + 值 |
| `getPosition <selector> <value>` |获取酒吧位置 |选择器 + 值 |
| `setPosition <selector> <value> <position>` |设置栏位置|选择器 + 值 + 位置（上、下、左、右）|

**选择器：**
- `index` - 按位置选择（从 0 开始）
- `id` - 通过唯一的条 ID 选择
- `name` - 按酒吧名称选择

**示例：**
```bash
# By index
dms ipc call bar hide index 0
dms ipc call bar reveal index 1
dms ipc call bar toggle index 0

# By name
dms ipc call bar toggle name "Main Bar"
dms ipc call bar status name "Secondary"

# By ID
dms ipc call bar reveal id abc123

# Auto-hide controls
dms ipc call bar autoHide index 0
dms ipc call bar manualHide name "Main Bar"
dms ipc call bar toggleAutoHide index 1

# Position controls
dms ipc call bar getPosition index 0
dms ipc call bar getPosition id default
dms ipc call bar setPosition index 0 top
dms ipc call bar setPosition id default left
```

### 码头 {#dock}

停靠可见性和行为控制。

|功能|描述 |
| --- | --- |
| `reveal` |显示坞站 |
| `hide` |隐藏扩展坞 |
| `toggle` |切换停靠栏可见性 |
| `status` |获取码头可见性状态 |
| `autoHide` |启用自动隐藏模式 |
| `manualHide` |禁用自动隐藏模式 |
| `toggleAutoHide` |切换自动隐藏模式 |

**示例：**
```bash
dms ipc call dock toggle
dms ipc call dock hide
dms ipc call dock reveal
dms ipc call dock status

# Auto-hide controls
dms ipc call dock autoHide
dms ipc call dock manualHide
dms ipc call dock toggleAutoHide
```

### 小部件 {#widget}

控制栏小部件弹出窗口、菜单和可见性（包括插件）。

|功能|描述 |参数|
| --- | --- | --- |
| `toggle <widgetId>` |切换小部件弹出窗口可见性 |小部件 ID |
| `list` |列出所有已注册的具有可见性状态的小部件 ID | - |
| `status <widgetId>` |获取小部件弹出窗口可见性状态 |小部件 ID |
| `visibility <widgetId>` |获取小部件可见性状态 |小部件 ID |
| `reveal <widgetId>` |强制小部件可见 |小部件 ID |
| `hide <widgetId>` |强制隐藏小部件 |小部件 ID |
| `reset <widgetId>` |清除可见性覆盖，恢复正常行为 |小部件 ID |

**示例：**
```bash
dms ipc call widget list
dms ipc call widget toggle clock
dms ipc call widget status weather

# Control widget visibility on the bar
dms ipc call widget visibility weather
dms ipc call widget hide weather
dms ipc call widget reveal weather
dms ipc call widget reset weather
```

**注释：**
- 使用 `list` 发现可用的小部件 ID 及其当前可见性状态（`[visible]` 或 `[hidden]`）
- 小部件 ID 取决于您的栏设置中启用了哪些小部件
- `status` 函数返回小部件 **弹出** 状态的“可见”或“隐藏”
- `visibility`、`reveal`、`hide` 和 `reset` 函数控制小部件的**栏存在**（无论它是否出现在栏上）
- 插件可以通过 `visibilityCommand` 定义条件可见性 — 使用 `reset` 在覆盖后返回到该行为

## 模态控件 {#modal-controls}

这些目标控制各种模式窗口和叠加层。

### 聚光灯 {#spotlight}

具有搜索功能的应用程序启动器模式。

|功能|描述 |参数|
| --- | --- | --- |
| `open` |显示启动器 | - |
| `close` |隐藏启动器 | - |
| `toggle` |切换启动器可见性 | - |
| `openQuery <query>` |显示带有搜索的启动器 |搜索文本|
| `toggleQuery <query>` |切换启动器与搜索 |搜索文本|

**示例：**
```bash
dms ipc call spotlight toggle
dms ipc call spotlight openQuery browser
dms ipc call spotlight toggleQuery "!"
```

### 其他情态动词 {#other-modals}

所有这些模态都支持 `open`、`close` 和 `toggle` 功能：

- **剪贴板** - 剪贴板历史记录管理器
- **通知** - 通知中心（还支持 `clearAll`、`dismissAllPopups`、`toggleDoNotDisturb` 和 `getDoNotDisturb`）
- **进程列表** - 系统进程列表和性能监视器（还支持`focusOrToggle`）
- **powermenu** - 用于系统操作的电源菜单
- **控制中心** - 快速设置（网络、蓝牙、音频等）
- **记事本** - 快速记事本/便签本

**示例：**
```bash
dms ipc call clipboard toggle
dms ipc call notifications open
dms ipc call notifications clearAll
dms ipc call notifications dismissAllPopups
dms ipc call notifications toggleDoNotDisturb
dms ipc call notifications getDoNotDisturb
dms ipc call processlist open
dms ipc call powermenu toggle
dms ipc call control-center toggle
dms ipc call notepad open
```

### 设置 {#settings}

设置模式，具有对配置值的附加读/写访问权限。

|功能|描述 |参数|
| --- | --- | --- |
| `open` |显示设置模式 | - |
| `openWith <tab>` |打开特定选项卡的设置 |选项卡 ID |
| `close` |隐藏设置模式 | - |
| `toggle` |切换设置模式 | - |
| `toggleWith <tab>` |将设置切换到特定选项卡 |选项卡 ID |
| `focusOrToggle` |焦点设置（如果打开），否则切换 | - |
| `focusOrToggleWith <tab>` |聚焦/切换到特定选项卡 |选项卡 ID |
| `tabs` |列出可用的选项卡 ID | - |
| `get <key>` |获取设定值|设置键名 |
| `set <key> <value>` |设定设定值 |设置键，新值 |

**可用选项卡 ID：**
- **个性化：** `personalization`、`wallpaper`、`theme`、`typography`、`time_weather`、`sounds`
- **DankBar：** `dankbar`、`dankbar_settings`、`dankbar_widgets`
- **小部件：** `workspaces_widgets`、`workspaces`、`media_player`、`notifications`、`osd`、`running_apps`、`updater`
- **底座和启动器：** `dock_launcher`、`dock`、`launcher`
- **系统：** `keybinds`、`displays`、`network`、`printers`
- **电源和安全：** `power_security`、`lock_screen`、`power_sleep`
- **其他：** `plugins`，`about`

**示例：**
```bash
dms ipc call settings toggle
dms ipc call settings openWith theme
dms ipc call settings toggleWith dock
dms ipc call settings tabs
dms ipc call settings set showSeconds true
dms ipc call settings set opacity 0.9
```

**注意：** `set` 函数支持布尔值、数字和字符串值。目前不支持对象和数组。

### 破折号 {#dash}

带有多个选项卡的仪表板弹出窗口。

|功能|描述 |参数|
| --- | --- | --- |
| `open [tab]` |显示仪表板 |选项卡：“”、“概述”、“媒体”、“天气”|
| `close` |隐藏仪表板 | - |
| `toggle [tab]` |切换仪表板 |选项卡|

**示例：**
```bash
dms ipc call dash toggle ""
dms ipc call dash open overview
dms ipc call dash toggle media
dms ipc call dash open weather
```

### 文件 {#file}

用于选择壁纸和个人资料图像的文件浏览器控件。

|功能|描述 |参数|
| --- | --- | --- |
| `browse <type>` |打开文件浏览器 | “壁纸”或“配置文件”|

**示例：**
```bash
dms ipc call file browse wallpaper
dms ipc call file browse profile
```

### dankdash {#dankdash}

DankDash 壁纸浏览器控制。

|功能|描述 |
| --- | --- |
| `wallpaper` |切换 DankDash 壁纸浏览器 |

**示例：**
```bash
dms ipc call dankdash wallpaper
```

### 欢迎 {#welcome}

首次启动欢迎向导，包含功能概述、系统诊断和配置快速链接。

|功能|描述 |参数|
| --- | --- | --- |
| `open` |在欢迎页面显示向导 | - |
| `doctor` |在系统检查页面显示向导| - |
| `page <num>` |在特定页面显示向导 | 0=欢迎，1=医生，2=完成 |

**页数：**
- **0 - 欢迎**：具有 DMS 亮点的功能概述
- **1 - 系统检查**：运行 `dms doctor` 并提供可过滤的结果（错误、警告、信息、正常）
- **2 - 完整**：配置快速链接、按键绑定快捷方式和外部资源

**示例：**
```bash
dms ipc call welcome open
dms ipc call welcome doctor
dms ipc call welcome page 2
```

**设置集成：** 可在“设置”→“关于”→“工具”中使用“显示欢迎”和“系统检查”按钮。

## 系统实用程序 {#system-utilities}

### 尼里 {#niri}

**需要 niri 25.11+**

niri 合成器的屏幕截图功能。捕获在您配置的编辑器中打开以进行标记和注释。

|功能|描述 |
| --- | --- |
| `screenshot` |互动选择截图|
| `screenshotScreen` |捕获整个屏幕 |
| `screenshotWindow` |捕获聚焦窗口 |

**示例：**
```bash
dms ipc call niri screenshot
dms ipc call niri screenshotScreen
dms ipc call niri screenshotWindow
```

**配置：**

设置 `DMS_SCREENSHOT_EDITOR` 环境变量以选择您首选的屏幕截图编辑器后端：

```bash
# Use Swappy (default)
export DMS_SCREENSHOT_EDITOR=swappy

# Use Satty
export DMS_SCREENSHOT_EDITOR=satty
```

**要求：** 必须安装 niri 合成器和您选择的屏幕截图编辑器（Swappy 或 Satty）。

### 按键绑定 {#keybinds}

与多个提供程序一起使用的动态键绑定备忘单模式。

|功能|描述 |参数|
| --- | --- | --- |
| `open <provider>` |显示按键绑定模式 |提供商名称（例如“hyprland”、“sway”、“mangowc”）|
| `openWithPath <provider> <path>` |使用自定义配置路径显示按键绑定模式 |提供者名称，配置路径|
| `close` |隐藏按键绑定模式 | - |
| `toggle <provider>` |切换按键绑定模态可见性 |提供商名称 |
| `toggleWithPath <provider> <path>` |使用自定义配置路径切换按键绑定模式 |提供者名称，配置路径|

**示例：**
```bash
dms ipc call keybinds toggle hyprland
dms ipc call keybinds toggle sway
dms ipc call keybinds toggle mangowc
dms ipc call keybinds open tmux

# With custom config paths
dms ipc call keybinds openWithPath hyprland /custom/path/to/hypr
dms ipc call keybinds toggleWithPath sway /etc/sway/config
```

**支持的提供商：**

键绑定模式支持通过 `dms keybinds` CLI 提供的所有提供程序：
- **内置提供程序**：Hyprland、Sway、MangoWC（自动解析合成器配置）
- **自定义备忘单**：`~/.config/DankMaterialShell/cheatsheets/` 中任何基于 JSON 的备忘单

该模式自动解析配置文件并显示按类别组织的按键绑定以及可选的子类别。有关提供程序和创建自定义备忘单的更多详细信息，请参阅[按键绑定和备忘单](/docs/dankmaterialshell/cli-keybinds-cheatsheets) 文档。

### hypr {#hypr}

**仅限 Hyprland 的功能**

Hyprland 特定的工作区概览控制。

|功能|描述 |
| --- | --- |
| `openOverview` |显示 Hyprland 工作区概述 |
| `closeOverview` |隐藏 Hyprland 工作区概述 |
| `toggleOverview` |切换 Hyprland 工作区概览可见性 |

**示例：**
```bash
dms ipc call hypr toggleOverview
```

**工作区概述：**

工作区概述通过实时窗口预览显示所有显示器上的所有工作区：
- **多显示器支持** - 显示所有已连接显示器的工作区以及显示器名称标签
- **实时窗口预览** - 每个工作区上所有窗口的实时屏幕捕获
- **拖放** - 通过拖动在工作区和监视器之间移动窗口
- **键盘导航** - 使用左/右箭头键在当前显示器上的工作区之间切换
- **视觉指示器** - 活动工作区在包含窗口时突出显示
- **单击切换** - 单击任意工作区即可切换到该工作区
- **单击外部或按 Esc** - 关闭概述

**注意：** 如果未运行 Hyprland，所有 hypr 函数都会返回 `HYPR_NOT_AVAILABLE`。

### 插件 {#plugins}

在运行时管理插件 - 对于开发和故障排除很有用。

|功能|描述 |参数|
| --- | --- | --- |
| `list` |列出所有可用插件的状态 | - |
| `status <pluginId>` |检查插件是否已加载 |插件 ID |
| `reload <pluginId>` |热重载插件而无需重新启动 |插件 ID |
| `enable <pluginId>` |启用已禁用的插件 |插件 ID |
| `disable <pluginId>` |禁用已加载的插件 |插件 ID |

**示例：**
```bash
# See what plugins are available
dms ipc call plugins list

# Check if a specific plugin is running
dms ipc call plugins status myPlugin

# Hot-reload during development (no shell restart needed)
dms ipc call plugins reload myPlugin

# Toggle plugins on/off
dms ipc call plugins enable myPlugin
dms ipc call plugins disable myPlugin
```

### 系统更新程序 {#systemupdater}

系统更新程序外部检查请求。

|功能|描述 |
| --- | --- |
| `updatestatus` |触发系统更新检查 |

**示例：**
```bash
dms ipc call systemupdater updatestatus
```

### 桌面小部件 {#desktopwidget}

控制桌面小部件实例（时钟、系统监视器等）。

|功能|描述 |参数|
| --- | --- | --- |
| `list` |列出所有小部件实例及其 ID、类型、名称和状态 | - |
| `status <instanceId>` |获取小部件状态（启用、覆盖、点击等）|实例 ID |
| `enable <instanceId>` |启用小部件 |实例 ID |
| `disable <instanceId>` |禁用小部件 |实例 ID |
| `toggleEnabled <instanceId>` |启用/禁用小部件|实例 ID |
| `toggleOverlay <instanceId>` |切换在覆盖层上显示 |实例 ID |
| `setOverlay <instanceId> <bool>` |设置覆盖可见性 |实例 ID，真/假 |
| `toggleClickThrough <instanceId>` |切换点击模式 |实例 ID |
| `setClickThrough <instanceId> <bool>` |设置点击模式 |实例 ID，真/假 |
| `toggleSyncPosition <instanceId>` |跨屏幕切换位置同步 |实例 ID |
| `setSyncPosition <instanceId> <bool>` |设置跨屏幕位置同步 |实例 ID，真/假 |

**示例：**
```bash
# List all desktop widgets
dms ipc call desktopWidget list

# Get widget status
dms ipc call desktopWidget status dw_1234567890_abc123

# Toggle overlay visibility (useful for keybinds)
dms ipc call desktopWidget toggleOverlay dw_1234567890_abc123

# Enable click-through mode
dms ipc call desktopWidget setClickThrough dw_1234567890_abc123 true

# Toggle position sync
dms ipc call desktopWidget toggleSyncPosition dw_1234567890_abc123
```

**注释：**
- 使用 `list` 发现小部件实例 ID
- 点击模式允许鼠标点击穿过小部件到达下面的窗口
- 位置同步使小部件在多个显示器上保持相同的相对位置

## 脚本和自动化 {#scripting-and-automation}

IPC 命令设计用于与键绑定、脚本和自动化工具集成。

### 基于时间的自动化 {#time-based-automation}

```bash
#!/bin/bash
# Toggle night mode based on time of day
hour=$(date +%H)
if [ $hour -ge 20 ] || [ $hour -le 6 ]; then
    dms ipc call night enable
else
    dms ipc call night disable
fi
```

### 状态检查 {#status-checking}

```bash
# Check if screen is locked before performing action
if dms ipc call lock isLocked | grep -q "false"; then
    dms ipc call notifications open
fi
```

### 条件逻辑 {#conditional-logic}

```bash
# Increase brightness only if below threshold
current=$(dms ipc call brightness status | grep -oP '\d+')
if [ "$current" -lt 50 ]; then
    dms ipc call brightness set 50
fi
```

## 返回值 {#return-values}

大多数 IPC 函数返回字符串消息，指示：
- 使用当前值成功确认
- 如果操作失败，会出现错误消息
- 查询功能的状态信息
- 简单操作函数的空/无效返回

返回 void 的函数（如媒体控件）执行操作但不提供反馈。如果需要，可以通过其他方式检查应用程序状态。

## 后续步骤 {#next-steps}

请参阅合成器文档中特定于合成器的键绑定配置，以将这些 IPC 命令与您的工作流程集成。
